修复一些已知问题 & 新增查看文件详情
